--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Flav — Photography</title>
+  <title>Flavia Dell'Erba — Photography</title>
   <meta name="description" content="Portfolio fotografico di Flav: selezioni, progetti e contatti.">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -21,8 +21,8 @@
 
   <main>
     <section class="hero container">
-      <h1>Fotografia, luce, gesti.</h1>
-      <p class="subtitle">Una selezione essenziale dei lavori di Flavia.</p>
+      <h1> </h1>
+      <p class="subtitle">Una selezione essenziale dei lavori di Flavia</p>
     </section>
 
     <section id="portfolio" class="container">
