--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="#">FLAV</a>
+      <a class="brand" href="#">FLAVIA DELL'ERBA</a>
       <nav class="nav">
         <a href="#portfolio">Portfolio</a>
         <a href="#about">About</a>
