--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <section id="contact" class="container contact">
       <h2>Contatti</h2>
       <ul>
-        <li>Email: flaviadellerba98@gmail.com <a href="mailto:ciao@example.com">ciao@example.com</a></li>
-        <li>Instagram: flllauta<a href="https://instagram.com/" target="_blank" rel="noopener">@flav</a></li>
+        <li>Email: <a href="mailto:flaviadellerba98@gmail.com">flaviadellerba98@gmail.com</a></li>
+        <li>Instagram: <a href="https://www.instagram.com/flllauta/" target="_blank" rel="noopener">@flllauta</a></li>
       </ul>
     </section>
   </main>
