--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main>
     <section class="hero container">
       <h1> </h1>
-      <p class="subtitle">Una selezione essenziale dei lavori di Flavia</p>
+      <p class="subtitle">Una raccolta essenziale</p>
     </section>
 
     <section id="portfolio" class="container">
