--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <main>
     <section class="hero container">
-      <h1> </h1>
-      <p class="subtitle">Una raccolta essenziale</p>
+      <h1>Una raccolta essenziale, un manifesto dudista</h1>
+      <p class="subtitle"> </p>
     </section>
 
     <section id="portfolio" class="container">
