--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
   <main>
     <section class="hero container">
-      <h1>Una raccolta essenziale, un manifesto dudista</h1>
+      <h1> </h1>
       <p class="subtitle"> </p>
     </section>
 
     <section id="portfolio" class="container">
-      <h2>Portfolio Highlights</h2>
+      <h2>Portfolio</h2>
       <div id="gallery" class="gallery" aria-live="polite"></div>
       <p class="more-note">Vuoi vedere altro? Segui <a href="https://www.instagram.com/flllauta/" target="_blank" rel="noopener">Instagram</a>.</p>
     </section>
